force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Follow_Up_Date__c</fullName>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>