force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Follow_Up_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>refedge__Follow_Up_Timeframe__c</fullName>
    <label>Follow Up Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>180 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>