force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Initial_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Initial_Notification_Date__c</fullName>
    <description>Indicates the date that the FIRST notification was sent to the Reference Lead Owner</description>
    <inlineHelpText>Indicates the date that the FIRST notification was sent to the Reference Lead Owner</inlineHelpText>
    <label>Initial Notification Date</label>
    <type>Date</type>
</CustomField>