force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Initial_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>refedge__Initial_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the FIRST notification was sent to the Reference Lead Owner</description>
    <inlineHelpText>Indicates that the FIRST notification was sent to the Reference Lead Owner</inlineHelpText>
    <label>Initial Notification Sent</label>
    <type>Checkbox</type>
</CustomField>