force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__No_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__No_Response_Date__c</fullName>
    <description>Indicates when to set the Reference Lead status to No Response.</description>
    <inlineHelpText>Indicates when to set the Reference Lead status to No Response.</inlineHelpText>
    <label>No Response Date</label>
    <type>Date</type>
</CustomField>