force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Nominated__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nominated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nominated</label>
    <type>Checkbox</type>
</CustomField>