force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>