force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Reference_Lead_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Lead_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Lead Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Leads</relationshipLabel>
    <relationshipName>Reference_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>