force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Reference_Lead_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Lead_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Lead Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reference Leads</relationshipLabel>
    <relationshipName>Reference_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>