force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Reference_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Lead_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is typically the Opportunity Owner but could be replaced with another name if the Opportunity Owner is no longer the correct contact</description>
    <inlineHelpText>This is typically the Opportunity Owner but could be replaced with another name if the Opportunity Owner is no longer the correct contact</inlineHelpText>
    <label>Reference Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>