force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Reference_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Lead_Status__c</fullName>
    <description>Indicates where this Reference Lead is in the process</description>
    <inlineHelpText>Indicates where this Reference Lead is in the process</inlineHelpText>
    <label>Reference Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial notification sent</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Converted to Nomination</fullName>
            </value>
            <value>
                <fullName>Converted to Program Member</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Request Pending</fullName>
            </value>
            <value>
                <fullName>No New Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>