force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reminder_Date__c</fullName>
    <inlineHelpText>Indicates the date that the reminder notification will be sent to the Reference Lead Owner.</inlineHelpText>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>