force-app/main/default/objects/refedge__Reference_Lead__c/fields/refedge__Response_Received__c.field-meta.xml
<CustomField>
    <fullName>refedge__Response_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a response of some kind has been submitted from the VF page</description>
    <inlineHelpText>Indicates that a response of some kind has been submitted from the VF page</inlineHelpText>
    <label>Response Received</label>
    <type>Checkbox</type>
</CustomField>